doc:  项目描述文档修改